--- a/btdt-app/package.json
+++ b/btdt-app/package.json
@@ -38,5 +38,8 @@
 		"vite": "^5.0.3",
 		"vitest": "^1.2.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@tailwindcss/typography": "^0.5.13"
+	}
 }
