--- a/btdt-app/package.json
+++ b/btdt-app/package.json
@@ -40,6 +40,10 @@
 	},
 	"type": "module",
 	"dependencies": {
-		"@tailwindcss/typography": "^0.5.13"
+		"@langchain/community": "^0.2.11",
+		"@langchain/openai": "^0.1.3",
+		"@tailwindcss/typography": "^0.5.13",
+		"langchain": "^0.2.5",
+		"svelte-markdown": "^0.4.1"
 	}
 }
