--- a/btdt-app/package.json
+++ b/btdt-app/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/eslint": "^8.56.7",
+		"@types/node": "^20.14.2",
 		"autoprefixer": "^10.4.19",
 		"daisyui": "^4.12.2",
 		"eslint": "^9.0.0",
@@ -44,6 +45,9 @@
 		"@langchain/openai": "^0.1.3",
 		"@tailwindcss/typography": "^0.5.13",
 		"langchain": "^0.2.5",
-		"svelte-markdown": "^0.4.1"
+		"pg": "^8.12.0",
+		"reflect-metadata": "^0.2.2",
+		"svelte-markdown": "^0.4.1",
+		"typeorm": "^0.3.20"
 	}
 }
