--- a/btdt-app/package.json
+++ b/btdt-app/package.json
@@ -43,6 +43,7 @@
 	"dependencies": {
 		"@langchain/community": "^0.2.11",
 		"@langchain/openai": "^0.1.3",
+		"@sveltejs/adapter-node": "^5.1.1",
 		"@tailwindcss/forms": "^0.5.7",
 		"@tailwindcss/typography": "^0.5.13",
 		"langchain": "^0.2.5",
