--- a/btdt-app/package.json
+++ b/btdt-app/package.json
@@ -50,6 +50,7 @@
 		"langchain": "^0.2.5",
 		"pg": "^8.12.0",
 		"reflect-metadata": "^0.2.2",
+		"svelte-i18n": "^4.0.0",
 		"svelte-markdown": "^0.4.1",
 		"typeorm": "^0.3.20"
 	}
